--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,6 +60,7 @@
                 <li><a href="/categories/categoryProfits"> Category profits </a></li>
               </ul>
           </li>
+          <li class="active"><a href="/user">View Users</a></li>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
