--- a/views/login_signup.handlebars
+++ b/views/login_signup.handlebars
@@ -29,10 +29,10 @@
       <p class="message">Already registered? <a href="#">Sign In</a></p>
     </form>
 
-    <form class="login-form">
+    <form class="login-form" action="/" method="post">
       <input type="text" name="user_name" autocomplete="off" placeholder="username"/>
       <input type="password" name="user_password" placeholder="password"/>
-      <button a href="/home">login</button>
+      <input class="btn btn-primary" type="submit" value="login"/>
       <p class="message">Not registered? <a href="#">Create an account</a></p>
     </form>
   </div>
