fixed login button

--- a/views/login_signup.handlebars
+++ b/views/login_signup.handlebars
@@ -32,7 +32,8 @@
     <form class="login-form" action="/" method="post">
       <input type="text" name="user_name" autocomplete="off" placeholder="username"/>
       <input type="password" name="user_password" placeholder="password"/>
-      <input class="btn btn-primary" type="submit" value="login"/>
+      <!-- <input class="btn btn-primary" type="submit" value="login"/> -->
+      <button type="submit">login</button>
       <p class="message">Not registered? <a href="#">Create an account</a></p>
     </form>
   </div>
