--- a/views/login_signup.handlebars
+++ b/views/login_signup.handlebars
@@ -18,8 +18,37 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   <!-- </head> -->
+  <!DOCTYPE html>
+  <html>
+  <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="description" content="">
+      <meta name="author" content="">
 
-  <div class="login-page">
+      <title>Nelisa's Spaza Shop </title>
+
+      <!-- Bootstrap Core CSS -->
+
+      <link rel="stylesheet" href="/css/bootstrap.min.css">
+      <!-- Custom CSS -->
+      <link href="/css/main.css" rel="stylesheet">
+      <!-- Fonts -->
+      <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+      <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+      <nav class="navbar navbar-inverse ">
+        <div class="container">
+          <div class="navbar-header">
+
+             <a class="navbar-brand" href="/"><img id="logo" src = "/img/logo1.png"/></a>
+
+          </div>
+      </nav>
+
+<div class="login-page">
   <div class="form">
     <form class="register-form" action="/signup" method="POST">
       <input type="text" class="form-control" autocomplete="off" name="user_name" placeholder="name" required/>
@@ -38,6 +67,7 @@
     </form>
   </div>
 </div>
+</body>
 
 <script>
 var passWord = document.getElementById('userPassword');
@@ -65,4 +95,4 @@ passwordConfirm.onkeyup = validatePassword;
 
 
 
-<!-- </html> -->
+</html>
