--- a/views/Products.handlebars
+++ b/views/Products.handlebars
@@ -3,10 +3,11 @@
 <div class = "container-fluid">
 	<div class = "row">
 		<div class = "col-xs-12">
-			<!-- <a href="/products/add" class= "btn btn-primary">Add product</a> -->
+			{{#admin}}
 			<a href="/products/add"  class= "btn btn-primary">
 			<span class= "glyphicon glyphicon-plus"></span> Add product</a>
-			
+
+
 			<div class = "table-responsive">
 				<table class ="table" id = "productList">
 					<thead>
@@ -21,20 +22,41 @@
 							<td>{{product_id}}</td>
 							<td>{{product_name}}</td>
 							<td>{{category_name}}</td>
-					
+
+
 							<td><a href="/products/edit/{{product_id}}" class="btn btn-primary">
 							<span class= "glyphicon glyphicon-edit" ></span> Edit</a></td>
-							
+
 							<td><a href="/products/delete/{{product_id}}" class= "btn btn-primary">
 							<span class= "glyphicon glyphicon-trash"></span> Delete</a></td>
+
+
 						</tr>
 					{{/products}}
 
 				</table>
-			</div>	
+			</div>
+		</div>
+			{{/admin}}
+		<div class = "table-responsive">
+			<table class ="table" id = "productList">
+				<thead>
+					<tr>
+						<th>Product id</th>
+						<th>Product name</th>
+						<th>Category name</th>
+					</tr>
+				</thead>
+				{{#products}}
+					<tr>
+						<td>{{product_id}}</td>
+						<td>{{product_name}}</td>
+						<td>{{category_name}}</td>
+					</tr>
+				{{/products}}
+
+			</table>
 		</div>
 	</div>
+	</div>
 </div>
-
-
-
