--- a/views/Suppliers.handlebars
+++ b/views/Suppliers.handlebars
@@ -3,14 +3,11 @@
 <div class = "container-fluid">
 	<div class = "row">
 		<div class = "col-xs-12">
-
-			<!-- <a href ="/suppliers/addSuppliers">Add a new supplier</a> -->
-
-			<a href="/suppliers/addSuppliers"  class= "btn btn-primary">
+		{{#admin}}
+		<a href="/suppliers/addSuppliers"  class= "btn btn-primary">
 			<span class= "glyphicon glyphicon-plus"></span> Add a new suppler</a>
 
 			<div class = "table-responsive">
-
 				<table class = "table" id = "suppliers">
 					<thead>
 						<tr>
@@ -23,18 +20,34 @@
 							<td>{{supplier_id}}</td>
 							<td>{{supplier_name}}</td>
 
-							<!-- <td><a href="/suppliers/editSuppliers/{{supplier_id}}">Edit</a></td>
-							<td><a href="/suppliers/delete/{{supplier_id}}">Delete</a></td> -->
-
 							<td><a href="/suppliers/editSuppliers/{{supplier_id}}" class="btn btn-primary">
 							<span class="glyphicon glyphicon-edit"></span> Edit</a></td>
-							
+
 							<td><a href="/suppliers/delete/{{supplier_id}}" class= "btn btn-primary">
 							<span class="glyphicon glyphicon-trash"></span> Delete</a></td>
 						</tr>
-					{{/suppliers}}	
+					{{/suppliers}}
 				</table>
-			</div>	
+			</div>
+			{{/admin}}
+			{{#customer}}
+			<div class = "table-responsive">
+				<table class = "table" id = "suppliers">
+					<thead>
+						<tr>
+							<th>Supplier id</th>
+							<th>Supplier name</th>
+						</tr>
+					</thead>
+						{{#suppliers}}
+						<tr>
+							<td>{{supplier_id}}</td>
+							<td>{{supplier_name}}</td>
+						</tr>
+					{{/suppliers}}
+				</table>
+			</div>
+			{{/customer}}
 		</div>
 	</div>
-</div>	
+</div>
