--- a/views/Products.handlebars
+++ b/views/Products.handlebars
@@ -5,8 +5,8 @@
 		<div class="col-xs-12">
 			{{#admin}}
 				<a href="/products/add" class="btn btn-primary">
-					<span class="glyphicon glyphicon-plus"></span> Add product</a>
-
+				<span class="glyphicon glyphicon-plus"></span> Add product</a>
+			{{/admin}}
 
 				<div class="table-responsive">
 					<table class="table" id="productList">
@@ -22,7 +22,7 @@
 								<td>{{product_id}}</td>
 								<td>{{product_name}}</td>
 								<td>{{category_name}}</td>
-
+								{{#if../admin}}
 								<td>
 									<a href="/products/edit/{{product_id}}" class="btn btn-primary">
 										<span class="glyphicon glyphicon-edit"></span> Edit</a>
@@ -32,31 +32,12 @@
 									<a href="/products/delete/{{product_id}}" class="btn btn-primary">
 									<span class="glyphicon glyphicon-trash"></span> Delete</a>
 								</td>
+								{{/if}}
 							</tr>
 						{{/products}}
 
 					</table>
 				</div>
-		</div>
-		{{/admin}}
-		<div class="table-responsive">
-			<table class="table" id="productList">
-				<thead>
-					<tr>
-						<th>Product id</th>
-						<th>Product name</th>
-						<th>Category name</th>
-					</tr>
-				</thead>
-				{{#products}}
-					<tr>
-						<td>{{product_id}}</td>
-						<td>{{product_name}}</td>
-						<td>{{category_name}}</td>
-					</tr>
-				{{/products}}
-
-			</table>
 		</div>
 	</div>
 </div>
