admin can now see more then normal customers

--- a/views/Purchases.handlebars
+++ b/views/Purchases.handlebars
@@ -6,7 +6,7 @@
 
 			<!-- <a href ="/purchases/addPurchases">Add a purchase</a> -->
 			<a href="/purchases/addPurchases"  class= "btn btn-primary">
-			<span class= "glyphicon glyphicon-plus"></span> Add a purchase</a>
+			<span class= "glyphicon glyphicon-plus"></span></a>
 
 			<div class = "table-responsive">
 				<table class = "table" id = "purchases">
@@ -30,17 +30,14 @@
 							<td>{{date}}</td>
 
 							<td><a href="/purchases/editPurchases/{{purchase_id}}" class="btn btn-primary">
-							<span class="glyphicon glyphicon-edit"></span> Edit</a></td>
-							
+							<span class="glyphicon glyphicon-edit"></span></a></td>
+
 							<td><a href="/purchases/delete/{{purchase_id}}" class= "btn btn-primary">
-							<span class="glyphicon glyphicon-trash"></span> Delete</a></td>
+							<span class="glyphicon glyphicon-trash"></span></a></td>
 						</tr>
-					{{/purchases}}	
+					{{/purchases}}
 				</table>
 			</div>
 		</div>
 	</div>
 </div>
-							
-
-
