--- a/views/Sales.handlebars
+++ b/views/Sales.handlebars
@@ -3,9 +3,9 @@
 <div class = "container-fluid">
 	<div class = "row">
 		<div class = "col-xs-12">
-			
+
 			<a href="/sales/add"  class= "btn btn-primary">
-			<span class= "glyphicon glyphicon-plus"></span> Add sale</a>
+			<span class= "glyphicon glyphicon-plus"></span></a>
 
 			<div class = "table-responsive">
 				<table class="table" id = "salesRecords">
@@ -20,7 +20,7 @@
 					</thead>
 					{{#sales}}
 						<tr>
-							
+
 							<td>{{sales_id}}</td>
 							<td>{{product_name}}</td>
 							<td>R{{sales_price}}</td>
@@ -28,10 +28,10 @@
 							<td>{{date}}</td>
 
 							<td><a href="/sales/editSales/{{sales_id}}" class="btn btn-primary">
-							<span class="glyphicon glyphicon-edit"></span> Edit</a></td>
-							
+							<span class="glyphicon glyphicon-edit"></span></a></td>
+
 							<td><a href="/sales/delete/{{sales_id}}" class= "btn btn-primary">
-							<span class="glyphicon glyphicon-trash"></span> Delete</a></td>
+							<span class="glyphicon glyphicon-trash"></span></a></td>
 
 						</tr>
 					{{/sales}}
@@ -40,5 +40,3 @@
 		</div>
 	</div>
 </div>
-
-					
