--- a/views/Categories.handlebars
+++ b/views/Categories.handlebars
@@ -6,7 +6,7 @@
 
 			{{#admin}}
 			<a href="/categories/addCategories"  class= "btn btn-primary">
-			<span class= "glyphicon glyphicon-plus"></span> Add a category</a>
+			<span class= "glyphicon glyphicon-plus"></span></a>
 			{{/admin}}
 
 			<div class = "table-responsive">
@@ -24,10 +24,10 @@
 
 							{{#if ../admin}}
 							<td><a href="/categories/editCategories/{{category_id}}" class="btn btn-primary">
-							<span class="glyphicon glyphicon-edit"></span> Edit</a></td>
+							<span class="glyphicon glyphicon-edit"></span></a></td>
 
 							<td><a href="/categories/delete/{{category_id}}" class= "btn btn-primary">
-							<span class="glyphicon glyphicon-trash"></span> Delete</a></td>
+							<span class="glyphicon glyphicon-trash"></span></a></td>
 							{{/if }}
 						</tr>
 					{{/categories}}
