--- a/views/Products.handlebars
+++ b/views/Products.handlebars
@@ -5,7 +5,7 @@
 		<div class="col-xs-12">
 			{{#admin}}
 				<a href="/products/add" class="btn btn-primary">
-				<span class="glyphicon glyphicon-plus"></span> Add product</a>
+				<span class="glyphicon glyphicon-plus"></span></a>
 			{{/admin}}
 
 				<div class="table-responsive">
@@ -25,12 +25,12 @@
 								{{#if../admin}}
 								<td>
 									<a href="/products/edit/{{product_id}}" class="btn btn-primary">
-										<span class="glyphicon glyphicon-edit"></span> Edit</a>
+										<span class="glyphicon glyphicon-edit"></span></a>
 								</td>
 
 								<td>
 									<a href="/products/delete/{{product_id}}" class="btn btn-primary">
-									<span class="glyphicon glyphicon-trash"></span> Delete</a>
+									<span class="glyphicon glyphicon-trash"></span></a>
 								</td>
 								{{/if}}
 							</tr>
