--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,10 +40,10 @@
                 <li><a href="/products"> Products </a></li>
                 <li><a href="/categories"> Categories</a></li>
                 <li><a href="/suppliers"> Suppliers</a></li>
-
+                {{#admin}}
                 <li><a href="/sales"> Sales </a></li>
                 <li><a href="/purchases"> Purchases</a></li>
-                
+                {{/admin}}
               </ul>
             </li>
 
@@ -54,7 +54,7 @@
                 <li><a href="/categories/categoriesPopularity"> Category popularity </a></li>
                 </ul>
           </li>
-
+          {{#admin}}
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profits and Earnings <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -64,6 +64,7 @@
                 <li><a href="/categories/categoryProfits"> Category profits </a></li>
               </ul>
           </li>
+          {{/admin}}
           <!-- <li class="active"><a href="/user">View Users</a></li> -->
           <li><a href="/logout">Logout</a></li>
 
@@ -72,8 +73,10 @@
     </nav>
 
     {{{body}}}
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src = "/js/main.js">
 </body>
+
+
+<script src="/js/jquery.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script type="text/javascript" src = "/js/main.js">
 </html>
