--- a/views/User.handlebars
+++ b/views/User.handlebars
@@ -9,13 +9,14 @@
 						<tr>
 							<th>User Name</th>
 							<th>User Role</th>
-              <!-- <th>User Status</th> -->
+              <th>User Status</th>
 						</tr>
 					</thead>
 					{{#user}}
 						<tr>
 							<td>{{user_name}}</td>
 							<td>{{description}}</td>
+							<td>{{locked}}</td>
 
               <!-- <td><a href="/user/editUser/{{user_id}}" class="btn btn-primary">
 							<span class="glyphicon glyphicon-edit"></span> Edit</a></td> -->
