--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -64,7 +64,7 @@
                 <li><a href="/categories/categoryProfits"> Category profits </a></li>
               </ul>
           </li>
-          <!-- <li class="active"><a href="/user">View Users</a></li> -->
+          <li><a href="/user">View Users</a></li>
           {{/admin}}
 
           <li><a href="/logout">Logout</a></li>
