working on search bar

--- a/views/Products.handlebars
+++ b/views/Products.handlebars
@@ -1,7 +1,7 @@
 <h1>Product List</h1>
 
 
-<form class="navbar-form navbar-left" role="search">
+<form class="navbar-form navbar-left" role="search" action="/searchProducts" method="get">
 	<div class="form-group">
 		<input type="text" class="form-control" placeholder="Search Products">
 	</div>
