working on search bar

--- a/views/Products.handlebars
+++ b/views/Products.handlebars
@@ -1,9 +1,9 @@
 <h1>Product List</h1>
 
 
-<form class="navbar-form navbar-left" role="search" action="/searchProducts" method="get">
+<form class="navbar-form navbar-left" role="search" action="/products/search" method="post">
 	<div class="form-group">
-		<input type="text" class="form-control" placeholder="Search Products">
+		<input type="text" class="form-control" name="searchVal" placeholder="Search Products">
 	</div>
 	<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span></button>
 </form>
