added a messege when username or password is wrong

--- a/views/login_signup.handlebars
+++ b/views/login_signup.handlebars
@@ -44,6 +44,7 @@
           <!-- <input class="btn btn-primary" type="submit" value="login"/> -->
           <button type="submit">login</button>
           <p class="message">Not registered? <a href="#">Create an account</a></p>
+          {{messages.message}}
         </form>
       </div>
     </div>
