added delete function to users tables

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,1 @@
-<h1 class = "text-center jumbotron">Welcome to Nelisa's Spaza Shop</h1>
+<h1 class = "text-center jumbotron">Welcome to Nelisa's Spaza Shop</br>You are logged in as:<strong> {{ user_name }}</strong></h1>
