--- a/views/User.handlebars
+++ b/views/User.handlebars
@@ -13,7 +13,7 @@
 						</tr>
 					</thead>
 					{{#user}}
-					
+
 						<tr>
 							<td>{{user_name}}</td>
 							<td>{{description}}</td>
@@ -22,8 +22,8 @@
               <!-- <td><a href="/user/editUser/{{user_id}}" class="btn btn-primary">
 							<span class="glyphicon glyphicon-edit"></span> Edit</a></td> -->
 
-            <!--  <td><a href="/useer/delete/{{user_id}}" class= "btn btn-primary">
-							<span class="glyphicon glyphicon-trash"></span> Delete</a></td> -->
+             <td><a href="/user/delete/{{user_id}}" class= "btn btn-primary">
+							<span class="glyphicon glyphicon-trash"></span></a></td>
 						</tr>
 					{{/user}}
 				</table>
