fix products search bar

--- a/views/searchCat.handlebars
+++ b/views/searchCat.handlebars
@@ -39,7 +39,7 @@
 					{{/categories}}
 				</table>
 
-        <a href="/products" class="btn btn-primary">show all</a>
+        <a href="/categories" class="btn btn-primary">show all</a>
 
 			</div>
 		</div>
