--- a/views/Products.handlebars
+++ b/views/Products.handlebars
@@ -3,7 +3,7 @@
 
 <!-- <form class="navbar-form navbar-left" role="search"> -->
 	<div class="form-group">
-		<input type="text" class="form-control" name="searchVal" id="productSearchBar" placeholder="Search Products">
+		<input type="text" class="form-control" name="searchVal" value="{{searchVal}}" id="productSearchBar" placeholder="Search Products">
 	</div>
 <!-- </form> -->
 
@@ -16,7 +16,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="table-responsive">
-				<table class="table" id="productsList">
+				<table class="table" id="productList">
 						<thead>
 							<tr>
 								<th>Product id</th>
