--- a/views/User.handlebars
+++ b/views/User.handlebars
@@ -1,3 +1,5 @@
+{{#if admin}}
+
 <h1>User List</h1>
 
 <div class = "container-fluid">
@@ -41,6 +43,9 @@
 						</tr>
 					{{/user}}
 				</table>
+				{{else}}
+				<p> Access denied</p>
+				{{/if}}
 			</div>
 		</div>
 	</div>
