--- a/views/categoryEarnings.handlebars
+++ b/views/categoryEarnings.handlebars
@@ -1,3 +1,4 @@
+{{#if admin}}
 <h1>Earnings per category</h1>
 
 <div class = "container fluid">
@@ -18,6 +19,9 @@
             </tr>
         {{/categoryEarnings}}
         </table>
+        {{else}}
+				<p> Access denied</p>
+				{{/if}}
       </div>
     </div>
   </div>
