--- a/views/productEarnings.handlebars
+++ b/views/productEarnings.handlebars
@@ -1,3 +1,4 @@
+{{#if admin}}
 <h1>Earnings per product</h1>
 
 <div class = "container fluid">
@@ -18,6 +19,9 @@
             </tr>
         {{/productEarnings}}
         </table>
+        {{else}}
+				<p> Access denied</p>
+				{{/if}}
       </div>
     </div>
   </div>
