--- a/views/Purchases.handlebars
+++ b/views/Purchases.handlebars
@@ -1,16 +1,15 @@
 {{#if admin}}
-<h1>Purchases List</h1>
 
-<div class = "container-fluid">
+<div class = "container">
+<h1>Purchases List</h1>
 	<div class = "row">
 		<div class = "col-xs-12">
 
-			<!-- <a href ="/purchases/addPurchases">Add a purchase</a> -->
 			<a href="/purchases/addPurchases"  class= "btn btn-primary">
 			<span class= "glyphicon glyphicon-plus"></span></a>
 
 			<div class = "table-responsive">
-				<table class = "table" id = "purchases">
+				<table class = "table table-striped" id = "purchases">
 					<thead>
 						<tr>
 							<th>Purchase id</th>
