--- a/views/Sales.handlebars
+++ b/views/Sales.handlebars
@@ -1,7 +1,7 @@
 {{#if admin}}
-<h1>Sales Records</h1>
 
-<div class = "container-fluid">
+<div class = "container">
+<h1>Sales Records</h1>
 	<div class = "row">
 		<div class = "col-xs-12">
 
@@ -9,7 +9,7 @@
 			<span class= "glyphicon glyphicon-plus"></span></a>
 
 			<div class = "table-responsive">
-				<table class="table" id = "salesRecords">
+				<table class="table table-striped" id = "salesRecords">
 					<thead>
 						<tr>
 							<th>Sales id</th>
