--- a/views/categoriesPopularity.handlebars
+++ b/views/categoriesPopularity.handlebars
@@ -1,11 +1,10 @@
-<h1>Category Popularity List</h1>
-
-<div class = "container fluid">
+<div class = "container">
+	<h1>Category Popularity List</h1>
 	<div class = "row">
 		<div class = "col-xs-12">
 			<div class = "table-responsive">
 
-				<table class = "table" id = "categoriesPopularity">
+				<table class = "table table-striped" id = "categoriesPopularity">
 				<thead>
 					<tr>
 						<th>Category name</th>
