--- a/views/categoryEarnings.handlebars
+++ b/views/categoryEarnings.handlebars
@@ -1,11 +1,10 @@
 {{#if admin}}
-<h1>Earnings per category</h1>
-
-<div class = "container fluid">
+<div class = "container">
+  <h1>Earnings per category</h1>
   <div class = "row">
     <div class = "col-xs-12">
       <div class = "table-responsive">
-        <table class = "table" id = "category_nameEarnings">
+        <table class = "table table-striped" id = "category_nameEarnings">
           <thead>
             <tr>
               <th>Category Name</th>
