--- a/views/categoryProfits.handlebars
+++ b/views/categoryProfits.handlebars
@@ -1,11 +1,11 @@
 {{#if admin}}
-<h1>Profits per category</h1>
 
-<div class = "container fluid">
+<div class = "container">
+<h1>Profits per category</h1>
   <div class = "row">
     <div class = "col-xs-12">
       <div class = "table-responsive">
-        <table class = "table" id = "categoryProfits">
+        <table class = "table table-striped" id = "categoryProfits">
           <thead>
             <tr>
               <th>Category Name</th>
