--- a/views/productEarnings.handlebars
+++ b/views/productEarnings.handlebars
@@ -1,11 +1,11 @@
 {{#if admin}}
-<h1>Earnings per product</h1>
 
-<div class = "container fluid">
+<div class = "container">
+<h1>Earnings per product</h1>
   <div class = "row">
     <div class = "col-xs-12">
       <div class = "table-responsive">
-        <table class = "table" id = "productEarnings">
+        <table class = "table table-striped" id = "productEarnings">
           <thead>
             <tr>
               <th>Product Name</th>
