--- a/views/Suppliers.handlebars
+++ b/views/Suppliers.handlebars
@@ -1,6 +1,6 @@
-<h1>Suppliers List</h1>
 
-<div class = "container-fluid">
+<div class = "container">
+<h1>Suppliers List</h1>
 	<div class = "row">
 		<div class = "col-xs-12">
 		{{#admin}}
@@ -8,7 +8,7 @@
 		<span class= "glyphicon glyphicon-plus"></span></a>
 		{{/admin}}
 			<div class = "table-responsive">
-				<table class = "table" id = "suppliers">
+				<table class = "table table-striped" id = "suppliers">
 					<thead>
 						<tr>
 							<th>Supplier id</th>
