--- a/views/User.handlebars
+++ b/views/User.handlebars
@@ -1,12 +1,12 @@
 {{#if admin}}
 
-<h1>User List</h1>
 
-<div class = "container-fluid">
+<div class = "container">
+<h1>User List</h1>
 	<div class = "row">
 		<div class = "col-xs-12">
       <div class = "table-responsive">
-				<table class = "table" id = "userList">
+				<table class = "table table-striped" id = "userList">
 					<thead>
 						<tr>
 							<th>User Name</th>
@@ -27,10 +27,10 @@
 							<label class="radio-inline"><input type="radio" name="description" value="admin" onclick="this.form.submit();">Admin</label>
 						</form></td>
 
-						<td><form action="/updateStatus/{{user_id}}" method="post">
+						<!-- <td><form action="/updateStatus/{{user_id}}" method="post">
 							<label class="radio-inline"><input type="radio" name="locked" value="blocked" onclick="this.form.submit();">Blocked</label>
 							<label class="radio-inline"><input type="radio" name="locked" value="active" onclick="this.form.submit();">Active</label>
-						</form></td>
+						</form></td> -->
 
 							<!-- <form action="/updateDescription/{{user_id}}" method="post"> -->
 									<!-- <button type= "submit">make Customer</button> -->
