--- a/views/productPopularity.handlebars
+++ b/views/productPopularity.handlebars
@@ -1,10 +1,10 @@
-<h1>Product Popularity List</h1>
 
-<div class = "container fluid">
+<div class = "container">
+<h1>Product Popularity List</h1>
 	<div class = "row">
 		<div class = "col-xs-12">
 			<div class = "table-responsive">
-				<table class = "table" id = "productPopularity">
+				<table class = "table table-striped" id = "productPopularity">
 				<thead>
 					<tr>
 						<th>Product Name</th>
