--- a/views/productProfits.handlebars
+++ b/views/productProfits.handlebars
@@ -1,10 +1,9 @@
-<h1>Profits per product</h1>
-
-<div class = "container fluid">
+<div class = "container">
+  <h1>Profits per product</h1>
   <div class = "row">
     <div class = "col-xs-12">
       <div class = "table-responsive">
-        <table class = "table" id = "productProfits">
+        <table class = "table table-striped" id = "productProfits">
           <thead>
             <tr>
               <th>Product Name</th>
